--- a/src/views/module-stats.ejs
+++ b/src/views/module-stats.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Author Downloads | PDXNode</title>
+    <title>Module Stats | PDXNode</title>
     <link rel="shortcut icon" href="/favicon.ico?q=3" />
     <link rel="stylesheet" href="https://unpkg.com/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
