--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,4 @@
-html {
-  color: #000;
-}
+html { color: #000 }
 html, body { min-height: 100% }
 .hero {
   align-items: center;
@@ -11,19 +9,14 @@ html, body { min-height: 100% }
   min-height: 100vh;
   justify-content: center;
 }
-.hero-body {
-  padding: 3em 1em;
-}
+.hero-body { padding: 3em 1em }
 .hero-body.center { text-align: center }
 .content {
-  min-height: 90%;
-  max-width: 50em;
-  margin: 3em auto;
+  margin: 1em auto;
   padding: 2em;
-  overflow: hidden;
-  word-wrap: break-word;
   border: 1px solid #eee;
   background: #fff;
   box-shadow: 0 0 10px rgba(0,0,0,.1);
 }
 .content > *:first-child { margin-top: 0 }
+.module-search { margin: 1em 0 3em }
