--- a/static/style.css
+++ b/static/style.css
@@ -2,9 +2,6 @@ html { color: #000 }
 html, body { min-height: 100% }
 .hero {
   align-items: center;
-  background: #c2e59c; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to top, #c2e59c, #64b3f4); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to top, #c2e59c, #64b3f4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   display: flex;
   min-height: 100vh;
   justify-content: center;
@@ -20,3 +17,75 @@ html, body { min-height: 100% }
 }
 .content > *:first-child { margin-top: 0 }
 .module-search { margin: 1em 0 3em }
+.green-and-blue {
+  background: #c2e59c; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #c2e59c, #64b3f4); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #c2e59c, #64b3f4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.cinnamint {
+  background: #4AC29A;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #BDFFF3, #4AC29A);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #BDFFF3, #4AC29A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.midnight-city {
+  background: #232526;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.royal {
+  background: #141E30;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.bg {
+  background-image: url(https://upload.wikimedia.org/wikipedia/commons/0/0e/Willamette_River_Portland_Oregon.jpg);
+  background-size: cover;
+}
+.section { padding: 10vh 0 }
+.subhead { font-weight: 100 }
+.scroll-wrap {
+  position: relative;
+  padding-top: 70px;
+}
+.scroll {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 24px;
+  height: 24px;
+  margin-left: -12px;
+  border-left: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-animation: sdb05 1.5s infinite;
+  animation: sdb05 1.5s infinite;
+  box-sizing: border-box;
+}
+
+@-webkit-keyframes sdb05 {
+  0% {
+    -webkit-transform: rotate(-45deg) translate(0, 0);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: rotate(-45deg) translate(-20px, 20px);
+    opacity: 0;
+  }
+}
+@keyframes sdb05 {
+  0% {
+    transform: rotate(-45deg) translate(0, 0);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(-45deg) translate(-20px, 20px);
+    opacity: 0;
+  }
+}
